# mastering-pycharm-course

./: .gitignore  README.md  requirements.txt
code/first_project/: requirements.piptools
code/jinja_partials/: setup.py
demos/adv_analysis_project/: adv-moto-data.csv  adv_notebook.ipynb  adv_notebook.py
demos/data-driven-web-apps-with-flask/: README.md  requirements.piptools  requirements.txt
demos/first_project/: first_app.py  requirements.txt
demos/jinja_partials/: LICENSE  README.md  pyproject.toml  requirements-dev.txt  ruff.toml
demos/jinja_partials/example/: README.md  app.py  requirements.txt
demos/jinja_partials/example/db/: videos.json
demos/jinja_partials/example/templates/home/: index.html  listing.html
demos/jinja_partials/example/templates/shared/: _layout.html
demos/jinja_partials/example/templates/shared/partials/: video_image.html
demos/jinja_partials/example/views/: home.py
demos/jinja_partials/tests/: test_rendering.py
demos/jinja_partials/tests/test_templates/render/: bare.html  recursive.html  recursive_inner.html  with_data.html  with_layout.html
demos/jinja_partials/tests/test_templates/shared/: _layout.html
demos/perf_app/: core_compute.py  data_access.py  program.py  services.py
demos/podcast_collector/: app.py  collector-tests.http  http-client.env.json  pyproject.toml
demos/python-jumpstart-course-demos/: .gitignore  Credits.md  LICENSE  README.md  venv_on_windows.md
demos/table_test_app/: core.py  program.py  tests.py
demos/zapify/: pyproject.toml  readme.md
demos/zapify/zapify/: __init__.py
extra_samples/autos/: Auto Exploration.ipynb  explore.py  requirements.txt
extra_samples/parsing/: numparser.py  parser.py  test_parser.py
extra_samples/pet_daycare/: pets.py
extra_samples/profiling/: sentiment.py
extra_samples/web_and_less/: index.html
transcripts/01-intro/: 01-welcome.txt  02-what-well-cover.txt  03-the-spectrum-of-editors.txt  04-ides-are-crazy-fast.txt  05-pycharm-is-more-than-just-python.txt  06-cross-platform.txt  07-versions-pro-and-community-and-mapping-versions-to-the-course.txt  08-pycharm-is-open-source.txt  09-python-runtimes.txt  10-how-do-you-learn-all-the-features-of-an-ide.txt  11-this-is-not-an-infomercial.txt  12-get-the-source-code-on-github.txt  13-meet-your-instructor.txt
transcripts/02-projects/: 01-project-intro.txt  02-using-the-eap-version.txt  03-creating-projects.txt  04-working-with-existing-projects.txt  05-concept-creating-projects.txt  06-concept-mark-directory-as.txt  (+5 more)
(+643 files in other folders)
